--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/b-wojtowicz/isometric-pixel-art">View on GitHub</a>
 
-          <h1 id="project_title">Isometric-pixel-art</h1>
-          <h2 id="project_tagline">Isometric Pixel Art GIMP script-fu Plugin</h2>
+          <h1 id="project_title">Isometric pixel art</h1>
+          <h2 id="project_tagline">Isometric Pixel Art GIMP Plugin</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/b-wojtowicz/isometric-pixel-art/zipball/master">Download this project as a .zip file</a>
@@ -31,49 +31,74 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h3><a name="about-plugin" class="anchor" href="#about-plugin"><span class="octicon octicon-link"></span></a>About</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <p>
+          <strong>Isometric pixel art</strong> is a plugin for <a href="http://www.gimp.org/">GIMP</a> that generates isometric graphics.
+        </p>
+        <p>This tool was created for game developers to help them create temporary isometric assets during game production before final graphic is delivered by artists.</p>
+        <p>If you're using this different way - believe me it's also cool.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+        <h3><a name="plugin-installation" class="anchor" href="#plugin-installation"><span class="octicon octicon-link"></span></a>Installation notes</h3>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+        <p>
+          Just copy <a href="https://github.com/b-wojtowicz/isometric-pixel-art/raw/master/gimp/isometric_pixel_art.scm">this script</a> to your GIMP scripts folder.
+        </p>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+        <h3><a name="plugin-example" class="anchor" href="#plugin-example"><span class="octicon octicon-link"></span></a>Example of 'Box OR Tile'</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+        <div>
+          <p>
+            <strong>Box OR Tile</strong> function helps you to create different boxes like the one below:
+          </p>
+          <p class="ta_c">
+            <image src="images/assets/example_cube.png" alt="Cube">
+          </p>
+          <p>
+            All you need to do is choose from menu: <strong>Isometric pixel art -> Box OR Tile...</strong> and you will see this window:
+          </p>
+          <p class="ta_c">
+            <image src="images/assets/example_usage.png" alt="Config window">
+          </p>
+          <p>
+            Question you may ask: <em>How to understand X,Y,Z axes?</em> Here it is:
+          </p>
+          <p class="ta_c">
+            <image src="images/assets/example_axis.png" alt="Axes interpretation">
+          </p>
+          <p>
+            Configure you parameters and generate more of these:
+          </p>
+          <p class="ta_c">
+            <image src="images/assets/example_more.png" alt="Boxes variations">
+          </p>
+        </div>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+        <h3><a name="plugin-plans" class="anchor" href="#plugin-plans"><span class="octicon octicon-link"></span></a>In the future...</h3>
+        <p>
+          <ul>
+            <li>Add more tools &amp; utils</li>
+            <li>Send it to <a href="http://registry.gimp.org/">GIMP Plugin Registry<a/></li>
+          </ul>
+        </p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+        <h3><a name="plugin-plans" class="anchor" href="#plugin-plans"><span class="octicon octicon-link"></span></a>Bugs</h3>
+        <p>
+          Errors can be reported here: <a href="https://github.com/b-wojtowicz/isometric-pixel-art/issues">GitHub issues</a>
+        </p>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Isometric-pixel-art maintained by <a href="https://github.com/b-wojtowicz">b-wojtowicz</a></p>
+        <p class="copyright">Isometric-pixel-art for GIMP maintained by <a href="https://github.com/b-wojtowicz">Bartłomiej Wójtowicz</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
