small content update

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <image src="images/assets/example_cube.png" alt="Cube">
           </p>
           <p>
-            All you need to do is choose from menu: <strong>Isometric pixel art -> Box OR Tile...</strong> and you will see this window:
+            All you need to do: choose from menu: <strong>Isometric pixel art -> Box OR Tile...</strong> and you will see this window:
           </p>
           <p class="ta_c">
             <image src="images/assets/example_usage.png" alt="Config window">
