--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>
           <strong>Isometric pixel art</strong> is a plugin for <a href="http://www.gimp.org/">GIMP</a> that generates isometric graphics.
         </p>
-        <p>This tool was created for game developers to help them create temporary isometric assets during game production before final graphic is delivered by artists.</p>
+        <p>This tool was created for game developers to help them create temporary isometric assets during game production before final graphics is delivered by artists.</p>
         <p>If you're using this different way - believe me it's also cool.</p>
 
         <h3><a name="plugin-installation" class="anchor" href="#plugin-installation"><span class="octicon octicon-link"></span></a>Installation notes</h3>
