Fix after changing GH username

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/b-wojtowicz/isometric-pixel-art">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/qbart/isometric-pixel-art">View on GitHub</a>
 
           <h1 id="project_title">Isometric pixel art</h1>
           <h2 id="project_tagline">Isometric Pixel Art GIMP Plugin</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/b-wojtowicz/isometric-pixel-art/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/b-wojtowicz/isometric-pixel-art/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/qbart/isometric-pixel-art/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/qbart/isometric-pixel-art/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -42,7 +42,7 @@
         <h3><a name="plugin-installation" class="anchor" href="#plugin-installation"><span class="octicon octicon-link"></span></a>Installation notes</h3>
 
         <p>
-          Just copy <a href="https://github.com/b-wojtowicz/isometric-pixel-art/raw/master/gimp/isometric_pixel_art.scm">this script</a> to your GIMP scripts folder.
+          Just copy <a href="https://github.com/qbart/isometric-pixel-art/raw/master/gimp/isometric_pixel_art.scm">this script</a> to your GIMP scripts folder.
         </p>
 
         <h3><a name="plugin-example" class="anchor" href="#plugin-example"><span class="octicon octicon-link"></span></a>Example of 'Box OR Tile'</h3>
@@ -84,7 +84,7 @@
 
         <h3><a name="plugin-plans" class="anchor" href="#plugin-plans"><span class="octicon octicon-link"></span></a>Bugs</h3>
         <p>
-          Errors can be reported here: <a href="https://github.com/b-wojtowicz/isometric-pixel-art/issues">GitHub issues</a>
+          Errors can be reported here: <a href="https://github.com/qbart/isometric-pixel-art/issues">GitHub issues</a>
         </p>
 
       </section>
@@ -93,7 +93,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Isometric-pixel-art for GIMP maintained by <a href="https://github.com/b-wojtowicz">Bartłomiej Wójtowicz</a></p>
+        <p class="copyright">Isometric-pixel-art for GIMP maintained by <a href="https://github.com/qbart">Bartłomiej Wójtowicz</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
